# learn-robotics

./: .envrc  .gitignore  Dockerfile  README.md  main.py  notes.md  pyproject.toml  scratch.ipynb
notebooks/: data.ipynb  dataset_idxs.pkl  datasets.py  model.ipynb  obs.pkl  scratch.ipynb
scripts/: camera_repro.py  eval.py  eval_old.py  printenvs.py  record.py  record_old.py  setenv.py  tp.py  wirecheck.py  wirecheck_gui.py
scripts/debug/: camera_debug.py  camera_repro.py  eval_debug.py
zeromode/: __init__.py  utils.py
zeromode/wirecheck/: main.py  robot_panel.py  teleop_panel.py  widgets.py
