[project]
name = "learn-robotics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.11"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2,<2.4",
    "gym-hil>=0.1.13",
    "labmaze>=1.0.6",
    "lerobot[aloha,async,feetech,hilserl,kinematics,peft,phone,pusht,smolvla,xvla]>=0.4.3",
    "rerun-sdk[notebook]>=0.26.2",
]

[project.optional-dependencies]
cpu = ["torch>=2.7,<2.8", "torchvision"]
cuda = ["torch>=2.7,<2.8", "torchvision"]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cuda" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cuda" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cuda" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
