[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zeromode"]

[project]
name = "learn-robotics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "ipykernel>=7.1.0",
    "numpy>=2.2",
    "matplotlib>=3.10.8",
    "haikunator>=2.1.0",
    "itables>=2.7.3",
    "toga>=0.5.3",
]

[project.scripts]
wirecheck = "zeromode.wirecheck.main:main"

[project.optional-dependencies]
cpu = ["torch>=2.7,<2.11.0", "torchvision","rerun-sdk[notebook]>=0.26.2", "lerobot[aloha,pusht,async,peft,feetech,smolvla,xvla,hilserl,kinematics,phone]"]
cuda = ["torch>=2.7,<2.11.0", "torchvision", "lerobot[async,peft,smolvla,xvla,kinematics]>=0.4.3"]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cuda" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "cuda" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "cuda" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
